--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,2 @@
-<h2>Welcome to the funky albums at A and R records!</h2>
+<h2>Welcome to A & R records.</h2>
+<h2>The place for funky sounds and albums!</h2>
