--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,25 @@
-<p>
-  admin works!
-</p>
+<div class="card">
+  <div class="card-header">
+    <h3>Add New Album to Inventory</h3>
+  </div>
+  <div class="card-body">
+    <label>Album Title:</label>
+    <br>
+    <input #newTitle>
+  </div>
+
+  <div class="card-body">
+    <label>Album Artist:</label>
+    <br>
+    <input #newArtist>
+  </div>
+
+  <div class="card-body">
+    <label>Album Description:</label>
+    <br>
+    <textarea #newDescription></textarea>
+  </div>
+</div>
+<br>
+
+<button (click)="submitForm(newTitle.value, newArtist.value, newDescription.value); newTitle.value=''; newArtist.value=''; newDescription.value=''" class="btn btn-primary">Add</button>
