--- a/src/app/marketplace/marketplace.component.html
+++ b/src/app/marketplace/marketplace.component.html
@@ -1,7 +1,7 @@
 <h2>Marketplace</h2>
 
-<div *ngFor="let album of albums | async" (click)="goToDetailPage(album)" class="panel panel-default">
-  <div class="panel-body">
-    <h3><em>{{album.title}}</em> by {{album.artist}}</h3>
-  </div>
+<div class="card" *ngFor="let album of albums | async">
+    <div class="card-body">
+      <h3 (click)="goToDetailPage(album)"><em>{{album.title}}</em> by {{album.artist}}</h3>
+    </div>
 </div>
