add update feature to store

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -23,3 +23,7 @@
 <br>
 
 <button (click)="submitForm(newTitle.value, newArtist.value, newDescription.value); newTitle.value=''; newArtist.value=''; newDescription.value=''" class="btn btn-primary">Add</button>
+
+<div>
+  <app-marketplace></app-marketplace>
+</div>
