--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </ul>
   </div>
 </nav>
-<div class="container">
+<div class="container main-content">
   <h1>{{title}}</h1>
   <router-outlet></router-outlet>
 </div>
