--- a/src/app/album-detail/album-detail.component.html
+++ b/src/app/album-detail/album-detail.component.html
@@ -2,4 +2,5 @@
   <h3>{{(albumToDisplay | async)?.title}}</h3>
   <h4>{{(albumToDisplay | async)?.artist}}</h4>
   <p>{{(albumToDisplay | async)?.description}}</p>
+  <p>{{(albumToDisplay | async)?.price | currency }}</p>  
 </div>
