--- a/src/app/edit-album/edit-album.component.html
+++ b/src/app/edit-album/edit-album.component.html
@@ -11,6 +11,9 @@
 <label>New Album Description:</label>
 <input [(ngModel)]="selectedAlbum.description">
 
+<label>New Album Price:</label>
+<input [(ngModel)]="selectedAlbum.price">
+
 <button (click)="beginUpdatingAlbum(selectedAlbum)">Update</button>
 
 <hr>
