first commit, setup basic layout, thanks album-store

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,2 @@
 <h2>About Us</h2>
-<p>A and R Records dishes out only the newest and funkiest sounds. The youth love us and it's all about the kids. Respect the process. Go Blue. Fly eagles fly. Based in Philadelphia, if it's not funky it's not right. Go Blue.</p>
+<p>Logreon is the only crowd-sourcing site supporting starving artists in the Portland NW area. Art is life!</p>
