--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" routerLink="">A &amp; R Records</a>
+      <a class="navbar-brand" routerLink="">Logreon</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
-      <li><a routerLink="marketplace">Marketplace</a></li>
+      <li><a routerLink="contributor">Contributors</a></li>
     </ul>
   </div>
 </nav>
