add a rewards object to contributors class

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,2 +1,2 @@
 <h2>About Us</h2>
-<p>Logreon is the only crowd-sourcing site supporting starving artists in the Portland NW area. Art is life!</p>
+<p>Logreon is the only crowd-sourcing site supporting starving projects in the Portland NW area. Art is life!</p>
