--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   </div>
 </nav>
 <div class="container main-content">
-  <h1>{{title}}</h1>
+  <h1>{{organization}}</h1>
   <router-outlet></router-outlet>
 </div>
 
