--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,2 @@
 <h2>Welcome Logreon!</h2>
-<h2>The place for helping well deserved artists and projects!</h2>
+<h2>The place for helping well deserved projects and projects!</h2>
