--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -3,15 +3,15 @@
     <h3>Add New Contributor's to Inventory</h3>
   </div>
   <div class="card-body">
-    <label>Contributor's Title:</label>
+    <label>Contributor's Organization:</label>
     <br>
-    <input #newTitle>
+    <input #newOrganization>
   </div>
 
   <div class="card-body">
-    <label>Contributor's Artist:</label>
+    <label>Contributor's Project:</label>
     <br>
-    <input #newArtist>
+    <input #newProject>
   </div>
 
   <div class="card-body">
@@ -20,15 +20,36 @@
     <textarea #newDescription></textarea>
   </div>
 
+
   <div class="card-body">
-    <label>Contributor's Price:</label>
-    <br>
-    <input #newPrice>
+    <label>Contributor's Rewards:</label>
   </div>
+
+  <div class="card-body">
+    <label><b>Low Reward:</b></label><br>
+    <label>Value:</label>
+    <input #lowValue>
+    <!-- <label>Description:</label>
+    <input #lowDescription> -->
+  </div>
+  <!-- <div class="card-body">
+    <label><b>Medium Reward:</b></label><br>
+    <label>Value:</label>
+    <input #mediumValue>
+    <label>Description:</label>
+    <input #mediumDescription>
+  </div>
+  <div class="card-body">
+    <label><b>High Reward:</b></label><br>
+    <label>Value:</label>
+    <input #highValue>
+    <label>Description:</label>
+    <input #highDescription>
+  </div> -->
 </div>
 <br>
 
-<button (click)="submitForm(newTitle.value, newArtist.value, newDescription.value, newPrice.value); newTitle.value=''; newArtist.value=''; newDescription.value=''; newPrice.value=''" class="btn btn-primary">Add</button>
+<button (click)="submitForm(newOrganization.value, newProject.value, newDescription.value, lowValue.value); newOrganization.value=''; newProject.value=''; newDescription.value=''; lowValue.value='';" class="btn btn-primary">Add</button>
 
 <div>
   <app-contributors></app-contributors>
