--- a/src/app/contributors/contributors.component.html
+++ b/src/app/contributors/contributors.component.html
@@ -1,4 +1,4 @@
-<h2>Contributors</h2>
+<h2 class="center contributors">Contributors</h2>
 
 <div class="card" *ngFor="let contributor of contributors | async">
   <div class="card-body">
