--- a/src/app/edit-contributor/edit-contributor.component.html
+++ b/src/app/edit-contributor/edit-contributor.component.html
@@ -1,37 +1,59 @@
-<h4>Edit Contributor</h4>
+<div class="row">
 
-<label>New Contributor Organization:</label>
-<input [(ngModel)]="selectedContributor.organization">
-<br>
+  <div class="col-md-3">
+    <h4>Edit Contributor</h4>
 
-<label>New Contributor Project:</label>
-<input [(ngModel)]="selectedContributor.project">
-<br>
+    <label>New Contributor Organization:</label>
+    <input [(ngModel)]="selectedContributor.organization">
 
-<label>New Contributor Description:</label>
-<textarea [(ngModel)]="selectedContributor.description"></textarea>
-<br>
-<b class="rewards">Low Reward</b>
-<label>Value:</label>
-<input [(ngModel)]="selectedContributor.rewards.low.value">
 
-<label>Description:</label>
-<input [(ngModel)]="selectedContributor.rewards.low.description">
-<br>
-<b class="rewards">Medium Reward</b>
-<label>Value:</label>
-<input [(ngModel)]="selectedContributor.rewards.medium.value">
-<label>Description:</label>
-<input [(ngModel)]="selectedContributor.rewards.medium.description">
-<br>
-<b class="rewards">High Reward</b>
-<label>Value:</label>
-<input [(ngModel)]="selectedContributor.rewards.high.value">
-<label>Description:</label>
-<input [(ngModel)]="selectedContributor.rewards.high.description">
-<br>
+    <label>New Contributor Project:</label>
+    <input [(ngModel)]="selectedContributor.project">
 
-<button (click)="beginUpdatingContributor(selectedContributor)">Update</button>
+
+    <label>New Contributor Description:</label>
+    <textarea [(ngModel)]="selectedContributor.description"></textarea>
+  </div>
+  <div class="col-md-9">
+    <div class="card">
+      <div class="card-header">
+        <h3>Contributor's Rewards:</h3>
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card-body">
+              <label><b>Low Reward:</b></label>
+              <label>Value:</label>
+              <input [(ngModel)]="selectedContributor.rewards.low.value">
+              <label>Description:</label>
+              <textarea [(ngModel)]="selectedContributor.rewards.low.description"></textarea>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card-body">
+              <label><b>Medium Reward:</b></label>
+              <label>Value:</label>
+              <input [(ngModel)]="selectedContributor.rewards.medium.value">
+              <label>Description:</label>
+              <textarea [(ngModel)]="selectedContributor.rewards.medium.description"></textarea>
+            </div>
+          </div>
+          <div class="col-md-4">
+              <div class="card-body">
+                <label><b>High Reward:</b></label>
+                <label>Value:</label>
+                <input [(ngModel)]="selectedContributor.rewards.high.value">
+                <label>Description:</label>
+                <textarea [(ngModel)]="selectedContributor.rewards.high.description"></textarea>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<button class="update" (click)="beginUpdatingContributor(selectedContributor)">Update</button>
 
 <hr>
 <button (click)="beginDeletingContributor(selectedContributor)">Delete</button>
