--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,27 +1,26 @@
-<div class="card">
+<div class="card wholecard">
   <div class="card-body">
     <div class="row">
-      <div class="col-md-3">
-        <div class="card">
-          <div class="card-header">
-            <h3>Add New Contributor's to Inventory</h3>
-          </div>
-          <div class="card-body">
-            <label>Contributor's Organization:</label>
-            <br>
-            <input #newOrganization>
-
-            <label>Contributor's Project:</label>
-            <br>
-            <input #newProject>
-
-            <label>Contributor's Description:</label>
-            <br>
-            <textarea #newDescription></textarea>
-          </div>
+      <div class="col-lg-4">
+        <div >
+          <h3>Add New Contributor</h3>
         </div>
+        <div class="card-body">
+          <label>Contributor's Organization:</label>
+          <br>
+          <input #newOrganization>
+
+          <label>Contributor's Project:</label>
+          <br>
+          <input #newProject>
+
+          <label>Contributor's Description:</label>
+          <br>
+          <textarea #newDescription></textarea>
+        </div>
+
       </div>
-      <div class="col-md-9">
+      <div class="col-lg-8">
         <div class="card">
           <div class="card-header">
             <h3>Contributor's Rewards:</h3>
@@ -66,5 +65,5 @@
   </div>
 </div>
 <div>
-  <app-contributors></app-contributors>
+  <app-contributors class="wholecard"></app-contributors>
 </div>
