--- a/src/app/contributors/contributors.component.html
+++ b/src/app/contributors/contributors.component.html
@@ -1,6 +1,6 @@
-<h2 class="center contributors">Contributors</h2>
+<h2 class="center contributors"><span *ngIf="currentRoute === '/admin'">Edit </span>Contributors</h2>
 
-<div class="card" *ngFor="let contributor of contributors | async">
+<div class="card wholecard" *ngFor="let contributor of contributors | async">
   <div class="card-body">
     <h3 (click)="goToDetailPage(contributor)">{{contributor.organization}}'s {{contributor.project}}</h3>
     <div *ngIf="currentRoute === '/admin'">
