--- a/src/app/edit-contributor/edit-contributor.component.html
+++ b/src/app/edit-contributor/edit-contributor.component.html
@@ -1,20 +1,17 @@
 <div class="row">
 
-  <div class="col-md-3">
-    <h4>Edit Contributor</h4>
+  <div class="col-md-4">
 
     <label>New Contributor Organization:</label>
     <input [(ngModel)]="selectedContributor.organization">
 
-
     <label>New Contributor Project:</label>
     <input [(ngModel)]="selectedContributor.project">
-
 
     <label>New Contributor Description:</label>
     <textarea [(ngModel)]="selectedContributor.description"></textarea>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-8">
     <div class="card">
       <div class="card-header">
         <h3>Contributor's Rewards:</h3>
@@ -54,6 +51,9 @@
   </div>
 </div>
 <button class="update" (click)="beginUpdatingContributor(selectedContributor)">Update</button>
+<hr>
+<h3 class="center contributors">Add Posts</h3>
+<!---->
 
 <hr>
 <button (click)="beginDeletingContributor(selectedContributor)">Delete</button>
